# EmbeddingLens

./: .gitignore  pyproject.toml
embedding_lens/: binary_autoencoder.py  custom_data_analysis.py  custom_tqdm.py  embeds.py  experiments.py  fast_feature_experiments.py  fast_features.py  gated_sae.py  linear_model_sae.py  pca.py  reverse_top_k_sae.py  reverse_topk_experiments.py  reverse_topk_sae.py  sae.py  top_activating_examples.py  toy_datasets.py  train.py  train_bae.py  utils.py  vector_set.py  vibesaurus.py  vibesaurus_meta.json  visualize.py
vibesaurus-ui/: package-lock.json  package.json  tsconfig.json
vibesaurus-ui/app/: chart.tsx  layout.tsx  page.tsx
vibesaurus-ui/pages/: activation-unique-stems-histogram.tsx
vibesaurus-ui/public/: vibesaurus.json
