[tool.poetry]
name = "embedding-lens"
version = "0.1.0"
description = "A lens to view language model embeddings."
authors = ["UFO-101 <josephmiller101@gmail.com>"]
readme = "README.md"
packages = [{include = "embedding_lens"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
transformer-lens = "^1.15.0"
einops = "^0.7.0"
vscode-tqdm = "^4.66.2"
plotly = "^5.20.0"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
pyspellchecker = "^0.8.1"
nltk = "^3.8.1"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
