[tool.poetry]
name = "embedding-lens"
version = "0.1.0"
description = "A lens to view language model embeddings."
authors = ["UFO-101 <josephmiller101@gmail.com>"]
readme = "README.md"
packages = [{include = "embedding_lens"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.2"
transformer-lens = "^2.4.0"
einops = "^0.6.0"
vscode-tqdm = "^4.66.2"
plotly = "^5.20.0"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
pyspellchecker = "^0.8.1"
nltk = "^3.8.1"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest<9.0.0,>=8.1.1",
]

[tool.pdm.build]
includes = ["embedding_lens"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    {name = "UFO-101", email = "josephmiller101@gmail.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "torch<3.0.0,>=2.2.2",
    "vscode-tqdm<5.0.0,>=4.66.2",
    "plotly<6.0.0,>=5.20.0",
    "ipykernel<7.0.0,>=6.29.4",
    "ipywidgets<9.0.0,>=8.1.2",
    "pyspellchecker<1.0.0,>=0.8.1",
    "nltk<4.0.0,>=3.8.1",
    "kaleido==0.2.1",
    "nbformat>=5.10.4",
    "madbg>=1.3.2",
    "auto-circuit==1.0.1",
]
name = "embedding-lens"
version = "0.1.0"
description = "A lens to view language model embeddings."
readme = "README.md"
